
OVERVIEW

   o We thank Shane Frank, Ute Hahn and Sebastian Schutte for contributions.

   o Geometry with windows and images.

   o More edge corrections for K-function.

   o Improved algorithm for locally-scaled K-function.

   o Improved handling of 'fv' objects.

   o Bug fixes.

   o Nickname: Smoke and Mirrors

NEW FUNCTIONS

   o hopskel.test
   Hopkins-Skellam test of CSR

   o increment.fv
   Increments of a summary function: g(x) = f(x+h)-f(x-h).

   o rotmean
   Rotational average of pixel values in an image

   o fardist
   Distance from each pixel/data point to farthest part of window boundary

   o circumradius.owin
   Circumradius of a window

   o rmax.Trans, rmax.Ripley
   Compute the maximum distance 'r' for which the 
   translation edge correction and isotropic edge correction   
   are valid.

   o is.grey
   Determines whether a colour value is a shade of grey.

   o harmonise
   Convert several objects of the same class to a common format.
   (New generic function with existing methods harmonise.im and harmonise.fv)

SIGNIFICANT USER-VISIBLE CHANGES

   o pairwise interactions 
   Fitted parameters and other calculations for pairwise interaction models
   DiggleGatesStibbard, DiggleGratton, Fiksel, Geyer, Strauss 
   may change slightly due to a change in handling numerical rounding effects.

   o Kscaled
   Improved algorithm [thanks to Ute Hahn.]
   New arguments 'renormalise' and 'normpower' allow renormalisation
   of intensity, similar to Kinhom.

   o Kest
   New option: correction="rigid" computes the rigid motion correction.

   o eval.fv
   Functions no longer need to have exactly the same sequence of 'r' values.
   They will now be made compatible using 'harmonise.fv'.

   o crosspaircounts
   Results may change slightly due to a change in handling numerical 
   rounding effects.

   o scanpp 
   Upgraded to handle multiple columns of mark data.

   o circumradius
   The function 'circumradius' is now generic, with methods