@@ -586,6 +586,7 @@ export("dimnames.fasp")
 export("dimnames.msr")
 export("dim.owin")
 export("dirichlet")
+export("dirichlet.vertices")
 export("dirichlet.weights")
 export("disc")
 export("discpartarea")
@@ -1905,6 +1906,8 @@ export("spokes")
 export("square")
 export("startinrange")
 export("stieltjes")
+export("stienen")
+export("stienenSet")
 export("store.versionstring.spatstat")
 export("stratrand")
 export("Strauss")
