@@ -127,13 +127,15 @@ passthrough <- function(.Fun, ..., .Fname=NULL) {
 
 graphicsPars <- local({
   ## recognised additional arguments to image.default(), axis() etc
+    PlotArgs <- c(
+        "main", "asp", "sub", "axes", "ann",
+        "cex", "font", 
+        "cex.axis", "cex.lab", "cex.main", "cex.sub",
+        "col.axis", "col.lab", "col.main", "col.sub",
+        "font.axis", "font.lab", "font.main", "font.sub")
+    
   TheTable <- 
-    list(plot = c(
-           "main", "asp", "sub", "axes", "ann",
-           "cex", "font", 
-           "cex.axis", "cex.lab", "cex.main", "cex.sub",
-           "col.axis", "col.lab", "col.main", "col.sub",
-           "font.axis", "font.lab", "font.main", "font.sub"),
+    list(plot = PlotArgs,
          image = c(
            "main", "asp", "sub", "axes", "ann",
            "cex", "font", 
@@ -153,7 +155,8 @@ graphicsPars <- local({
            "cex.main", "cex.sub",
            "col.main", "col.sub",
            "font.main", "font.sub",
-           "xaxs", "yaxs"))
+           "xaxs", "yaxs"),
+         symbols = c(PlotArgs, "fg", "bg"))
 
   graphicsPars <- function(key) {
     n <- pmatch(key, names(TheTable))
