@@ -439,6 +439,9 @@ The following datasets have been added to the package.
 Following is a list of all the functions that have been added.
 
 \begin{itemize}
+\item \texttt{dirichlet.vertices}: Vertices of the Dirichlet tessellation.
+\item \texttt{stienen, stienenSet}: Stienen diagrams.
+\item \texttt{hopskel.test}: Hopkins-Skellam test.
 \item \texttt{is.grey}: determines whether a colour value is a shade of grey.
 \item \texttt{increment.fv}: increments of a summary function:
   $g(x) = f(x+h)-f(x-h)$.
