@@ -22,6 +22,12 @@ NEW FUNCTIONS
    o hopskel.test
    Hopkins-Skellam test of CSR
 
+   o stienen, stienenset
+   Stienen diagrams
+
+   o dirichlet.vertices
+   Vertices of the Dirichlet tessellation
+
    o increment.fv
    Increments of a summary function: g(x) = f(x+h)-f(x-h).
 
@@ -112,6 +118,9 @@ SIGNIFICANT USER-VISIBLE CHANGES
 
    o eroded.areas
    New argument 'subset'
+
+   o disc
+   New argument 'delta' 
 
    o harmonise.fv, harmonise.im
    These are now methods for the new generic 'harmonise'
